# dann5

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake project convert-create instructions - d5o.txt  cmake project create instructions - pybind11.txt  d5o class diagram.vsdx  d5o v02.vsdx  d5o.vsdx  dann5.ocean.sln
.spyproject/config/: workspace.ini
cpp_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dann5.ocean.sln  dann5.ocean.vcxproj  dann5.ocean.vcxproj.filters
cpp_build/Debug/: d5o.cp38-win_amd64.pyd
cpp_build/cpp_build/: cmake_install.cmake  d5o.vcxproj  d5o.vcxproj.filters
cpp_build/nbproject/: configurations.xml  project.xml
cpp_build/nbproject/private/: configurations.xml
cpp_build/pybind11/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  pybind11.sln
cpp_build/utilities/: vs2cm_convert.bat
examples/py/: 1_d5o_basic_features.ipynb  d5o_basic_features.ipynb  dann5_log.txt
examples/py/.ipynb_checkpoints/: 1_d5o_basic_features-checkpoint.ipynb  2_d5o_use_of_solvers-checkpoint.ipynb
examples/py/dann5/: d5o.cp38-win_amd64.pyd
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
ocean/cpp/: BQM.cpp  Global.cpp  Logger.cpp  Qcomparison.cpp  Qcondition.cpp  Qdef.cpp  Qequation.cpp  Qexpression.cpp  Qfunction.cpp  Qint.cpp  Qoperand.cpp  Qops.cpp  Qroutine.cpp  Qrutine.cpp  Qsolver.cpp  Qstatement.cpp  Qtype.cpp  Qubo.cpp  Qvar.cpp  main.cpp
ocean/cpp.new/: Logger.cpp  Qdef.cpp  Qequation.cpp  Qexpression.cpp  Qops.cpp  Qubo.cpp  Qvar.cpp  main.cpp
ocean/cpp.new/include/: Logger.h  Qdef.h  Qequation.h  Qexpression.h  Qops.h  Qubo.h
ocean/cpp/include/: BQM.h  Factory.h  Qcomparison.h  Qcondition.h  Qdef.h  Qequation.h  Qexpression.h  Qfunction.h  Qint.h  Qoperand.h  Qops.h  Qroutine.h  Qrutine.h  Qsolver.h  Qstatement.h  Qtype.h  Qubo.h  Qvar.h  Utility.h
test/: Addition samples.xlsx
test/cpp/: CMakeCache.txt  CMakeLists.txt  cpp_test.vcxproj  cpp_test.vcxproj.filters  dann5_log.txt  testApp.cpp
test/cpp/nbproject/: configurations.xml  project.xml
test/cpp/nbproject/private/: configurations.xml
test/d5o/d5o_test/: d5o_test.cpp  d5o_test.vcxproj  d5o_test.vcxproj.filters
test/d5o/d5o_test/include/: Logger.h  Qbinary.h  Qbit.h  Qbool.h  Qdef.h  Qexpr.h  Qop.h  Qsolver.h  Qtype.h  Qubo.h  Qwhole.h
test/d5o/d5o_test/source/: Global.cpp  Qbinary.cpp  Qbit.cpp  Qbool.cpp  Qop.cpp  Qsolver.cpp  Qubo.cpp  Qwhole.cpp
test/py/: DWbqmTest.py  d5oQuboAdditionTest.py  d5oQuboComplexEquationTest.py  d5oQuboDivisionTest.py  d5oQuboMultiplicationTest.py  d5oQuboSubtractionTest.py  d5oQuboTest.py
test/py/helpers/: convert.py  embedding.py  solvers.py
test/py/lib/: d5o.cp38-win_amd64.pyd  d5o.lib
